--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -20,6 +20,8 @@ env:
   LIBRARY_NAMESPACE: 'ansys.aedt.toolkits.common'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
   ON_CI: True
+  PYTEST_ARGUMENTS: '-vvv --color=yes -ra --durations=25 --maxfail=10 --cov=ansys.aedt.toolkits.common --cov-report=html --cov-report=xml --junitxml=junit/test-results.xml'
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -75,155 +77,183 @@ jobs:
           operating-system: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
 
-  tests_windows:
-    name: "Windows Tests"
-    strategy:
-      matrix:
-        python-version: [ '3.10' ]
-      fail-fast: false
-    runs-on: [self-hosted, pyaedt, toolkits, Windows]
-    needs: [smoke-tests]
+
+  utils-tests:
+    name: Running utils tests
+    needs: [ smoke-tests ]
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Run integration tests
+        uses: ansys/actions/tests-pytest@v8
         with:
-          python-version: ${{ matrix.python-version }}
+          pytest-postargs: 'tests/backend/tests_utils'
+          pytest-extra-args: ${{ env.PYTEST_ARGUMENTS }}
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+          optional-dependencies-name: util-tests
 
-      - name: Create Python venv
-        run: |
-          python -m venv .venv
-          .\.venv\Scripts\Activate.ps1
-
-      - name: Install packages for testing
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          python -m pip install --upgrade pip
-          pip install --upgrade build wheel
-          pip install .[tests]
-
-      - name: Test AEDT Common API
-        timeout-minutes: 5
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          pytest -v -m aedt_common_api --cov
-
-      - name: Test Common API
-        timeout-minutes: 5
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          pytest -v -m common_api --cov --cov-append
-
-      - name: Test EDB API
-        timeout-minutes: 5
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          pytest -v -m edb_api --cov --cov-append
-
-      - name: Test REST API
-        timeout-minutes: 5
-        run: |
-          .\.venv\Scripts\Activate.ps1
-
-          pytest -v -m rest_api --cov --cov-append
-
-      - name: Test utils
-        timeout-minutes: 5
-        run: |
-          .\.venv\Scripts\Activate.ps1
-
-          pytest -v -m utils --cov --cov-append
-
-      - name: "Combine coverage files"
-        run: |
-          .\.venv\Scripts\Activate.ps1
-          python -m coverage html -d .cov\total-html
-          python -m coverage xml -o .cov\total.xml
-
-      - name: "Upload coverage results"
-        if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION  }}
-        uses: actions/upload-artifact@v4
-        with:
-          path: .cov/total-html
-          name: html-total-coverage
-
-      - name: "Upload coverage report to codecov"
-        if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION }}
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
-          file: .cov/total.xml
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          name: codecov-utils-tests
+          files: ./coverage.xml
+          flags: linux_integration
 
-  tests_linux:
-    name: "Linux Tests"
-    strategy:
-      matrix:
-        python-version: [ '3.10' ]
-      fail-fast: false
-    runs-on: [self-hosted, pyaedt, toolkits, Linux]
-    needs: [ smoke-tests ]
-    env:
-      ANSYSEM_ROOT242: '/opt/AnsysEM/v242/Linux64'
-      ANS_NODEPCHECK: '1'
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Upload pytest test results
+        uses: actions/upload-artifact@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          name: pytest-integration
+          path: junit/test-results.xml
+        if: ${{ always() }}
 
-      - name: Create Python venv
-        run: |
-          python -m venv .venv_linux
-
-      - name: Install packages for testing
-        run: |
-          source .venv_linux/bin/activate
-          python -m pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip -U
-          python -m pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org wheel setuptools -U
-          python -c "import sys; print(sys.executable)"
-          python -m pip install --upgrade pip
-          pip install --upgrade build wheel
-          pip install .[tests]
-          pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pytest-azurepipelines
-
-      - name: Test AEDT Common API
-        timeout-minutes: 5
-        run: |
-          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
-          source .venv_linux/bin/activate
-          pytest -v -m aedt_common_api
-
-      - name: Test Common API
-        timeout-minutes: 5
-        run: |
-          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
-          source .venv_linux/bin/activate
-          pytest -v -m common_api
-
-      - name: Test EDB API
-        timeout-minutes: 5
-        run: |
-          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
-          source .venv_linux/bin/activate
-          pytest -v -m edb_api
-
-      - name: Test REST API
-        timeout-minutes: 5
-        run: |
-          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
-          source .venv_linux/bin/activate
-          pytest -v -m rest_api
-
-      - name: Test utils
-        timeout-minutes: 5
-        run: |
-          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
-          source .venv_linux/bin/activate
-          pytest -v -m utils
+#  tests_windows:
+#    name: "Windows Tests"
+#    strategy:
+#      matrix:
+#        python-version: [ '3.10' ]
+#      fail-fast: false
+#    runs-on: [self-hosted, pyaedt, toolkits, Windows]
+#    needs: [smoke-tests]
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Set up Python
+#        uses: actions/setup-python@v5
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#
+#      - name: Create Python venv
+#        run: |
+#          python -m venv .venv
+#          .\.venv\Scripts\Activate.ps1
+#
+#      - name: Install packages for testing
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#          python -m pip install --upgrade pip
+#          pip install --upgrade build wheel
+#          pip install .[tests]
+#
+#      - name: Test AEDT Common API
+#        timeout-minutes: 5
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#          pytest ${{ env.PYTEST_ARGUMENTS }} -v -m aedt_common_api
+#
+#      - name: Test Common API
+#        timeout-minutes: 5
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#          pytest -v -m common_api --cov --cov-append
+#
+#      - name: Test EDB API
+#        timeout-minutes: 5
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#          pytest -v -m edb_api --cov --cov-append
+#
+#      - name: Test REST API
+#        timeout-minutes: 5
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#
+#          pytest -v -m rest_api --cov --cov-append
+#
+#      - name: Test utils
+#        timeout-minutes: 5
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#
+#          pytest -v -m utils --cov --cov-append
+#
+#      - name: "Combine coverage files"
+#        run: |
+#          .\.venv\Scripts\Activate.ps1
+#          python -m coverage html -d .cov\total-html
+#          python -m coverage xml -o .cov\total.xml
+#
+#      - name: "Upload coverage results"
+#        if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION  }}
+#        uses: actions/upload-artifact@v4
+#        with:
+#          path: .cov/total-html
+#          name: html-total-coverage
+#
+#      - name: "Upload coverage report to codecov"
+#        if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION }}
+#        uses: codecov/codecov-action@v5
+#        with:
+#          file: .cov/total.xml
+#        env:
+#          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+#
+#  tests_linux:
+#    name: "Linux Tests"
+#    strategy:
+#      matrix:
+#        python-version: [ '3.10' ]
+#      fail-fast: false
+#    runs-on: [self-hosted, pyaedt, toolkits, Linux]
+#    needs: [ smoke-tests ]
+#    env:
+#      ANSYSEM_ROOT242: '/opt/AnsysEM/v242/Linux64'
+#      ANS_NODEPCHECK: '1'
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Set up Python
+#        uses: actions/setup-python@v5
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#
+#      - name: Create Python venv
+#        run: |
+#          python -m venv .venv_linux
+#
+#      - name: Install packages for testing
+#        run: |
+#          source .venv_linux/bin/activate
+#          python -m pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip -U
+#          python -m pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org wheel setuptools -U
+#          python -c "import sys; print(sys.executable)"
+#          python -m pip install --upgrade pip
+#          pip install --upgrade build wheel
+#          pip install .[tests]
+#          pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pytest-azurepipelines
+#
+#      - name: Test AEDT Common API
+#        timeout-minutes: 5
+#        run: |
+#          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
+#          source .venv_linux/bin/activate
+#          pytest -v -m aedt_common_api
+#
+#      - name: Test Common API
+#        timeout-minutes: 5
+#        run: |
+#          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
+#          source .venv_linux/bin/activate
+#          pytest -v -m common_api
+#
+#      - name: Test EDB API
+#        timeout-minutes: 5
+#        run: |
+#          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
+#          source .venv_linux/bin/activate
+#          pytest -v -m edb_api
+#
+#      - name: Test REST API
+#        timeout-minutes: 5
+#        run: |
+#          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
+#          source .venv_linux/bin/activate
+#          pytest -v -m rest_api
+#
+#      - name: Test utils
+#        timeout-minutes: 5
+#        run: |
+#          export LD_LIBRARY_PATH=${{ env.ANSYSEM_ROOT242 }}/common/mono/Linux64/lib64:$LD_LIBRARY_PATH
+#          source .venv_linux/bin/activate
+#          pytest -v -m utils
 
   build-library:
     name: "Build library artifacts"
