--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -258,7 +258,7 @@ jobs:
   build-library:
     name: "Build library artifacts"
     runs-on: ubuntu-latest
-    needs: [ doc-build, tests_windows, tests_linux ]
+    needs: [ doc-build, utils-tests ]
     steps:
       - uses: ansys/actions/build-library@v8
         with:
