--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -282,7 +282,7 @@ jobs:
   build-library:
     name: "Build library artifacts"
     runs-on: ubuntu-latest
-    needs: [ doc-build, utils-tests ]
+    needs: [ doc-build, common-tests-windows ]
     steps:
       - uses: ansys/actions/build-library@v8
         with:
