--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -311,18 +311,18 @@ jobs:
         with:
           library-name: ${{ env.LIBRARY_NAME }}
 
-  doc-deploy-dev:
-    name: "Deploy development documentation"
-    runs-on: ubuntu-latest
-    needs: build-library
-    if: github.event_name == 'push'
-    steps:
-      - uses: ansys/actions/doc-deploy-dev@v8
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
-          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+#  doc-deploy-dev:
+#    name: "Deploy development documentation"
+#    runs-on: ubuntu-latest
+#    needs: build-library
+#    if: github.event_name == 'push'
+#    steps:
+#      - uses: ansys/actions/doc-deploy-dev@v8
+#        with:
+#          cname: ${{ env.DOCUMENTATION_CNAME }}
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+#          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
 
   doc-deploy-stable:
     name: "Deploy stable documentation"
