--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -289,27 +289,27 @@ jobs:
 #          library-name: ${{ env.LIBRARY_NAME }}
 #          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
-  release:
-    name: "Release"
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    needs: build-library
-    runs-on: ubuntu-latest
-    # Specifying a GitHub environment is optional, but strongly encouraged
-    environment: release
-    permissions:
-      id-token: write
-      contents: write
-    steps:
-      - name: "Release to the public PyPI repository"
-        uses: ansys/actions/release-pypi-public@v8
-        with:
-          library-name: ${{ env.LIBRARY_NAME }}
-          use-trusted-publisher: true
-
-      - name: "Release to GitHub"
-        uses: ansys/actions/release-github@v8
-        with:
-          library-name: ${{ env.LIBRARY_NAME }}
+#  release:
+#    name: "Release"
+#    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+#    needs: build-library
+#    runs-on: ubuntu-latest
+#    # Specifying a GitHub environment is optional, but strongly encouraged
+#    environment: release
+#    permissions:
+#      id-token: write
+#      contents: write
+#    steps:
+#      - name: "Release to the public PyPI repository"
+#        uses: ansys/actions/release-pypi-public@v8
+#        with:
+#          library-name: ${{ env.LIBRARY_NAME }}
+#          use-trusted-publisher: true
+#
+#      - name: "Release to GitHub"
+#        uses: ansys/actions/release-github@v8
+#        with:
+#          library-name: ${{ env.LIBRARY_NAME }}
 
 #  doc-deploy-dev:
 #    name: "Deploy development documentation"
@@ -324,15 +324,15 @@ jobs:
 #          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
 #          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
 
-  doc-deploy-stable:
-    name: "Deploy stable documentation"
-    runs-on: ubuntu-latest
-    needs: release
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    steps:
-      - uses: ansys/actions/doc-deploy-stable@v8
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
-          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+#  doc-deploy-stable:
+#    name: "Deploy stable documentation"
+#    runs-on: ubuntu-latest
+#    needs: release
+#    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+#    steps:
+#      - uses: ansys/actions/doc-deploy-stable@v8
+#        with:
+#          cname: ${{ env.DOCUMENTATION_CNAME }}
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+#          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
