fixed logger debug

--- a/src/ansys/aedt/toolkits/common/backend/common_properties.toml
+++ b/src/ansys/aedt/toolkits/common/backend/common_properties.toml
@@ -9,6 +9,6 @@ use_grpc= true
 is_toolkit_busy= false
 url= "127.0.0.1"
 port= 5001
-debug= true
+debug= false
 toolkit_name= "common"
 log_file= "common_backend.log"
